# sw

./: .gitignore  .gitmodules  README.md  build.bat  install.bat  install_requirements.sh  netinstall.bat  netinstall.ps1  netinstall.sh  out  setup.xml
libraries/midlevel/: CMakeLists.txt
libraries/midlevel/MatrixMultiply/: LoadMatrix.cpp  MatrixMultiply.cpp  MatrixMultiply.xpuprj
libraries/midlevel/api/include/: xrt.h
libraries/midlevel/api/src/: callbackTable.c
libraries/midlevel/functions/MatrixMultiply/: LoadMatrix.cpp  MatrixMultiply.xpuprj
libraries/midlevel/functions/SimpleFunction/: SimpleFunction.cpp
libraries/midlevel/functions/include/: xpu_functions.h
libraries/midlevel/tests/: all_tests.sh
libraries/midlevel/tests/static_midlevel/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/test-debug0/: CMakeLists.txt
libraries/midlevel/tests/test0/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/test1/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/test2/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/test3/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/test4/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/test5/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/test_6_install/: CMakeLists.txt  main.cpp
libraries/midlevel/tests/xrt/: 16_2_2_mat_mat_add_hadamard_square_32x32_test1.func
libraries/midlevel/tests/xrt/original_asm_files/: prim_cycle_counter_start_wo_halt.asm  prim_delay_5.asm  prim_initialize.asm  prim_mat_mat_add_hadamard_square.asm  prim_set_addr_regs.asm  prim_set_interrupt.asm  prim_set_res_ready.asm  prim_wait_matrices.asm
tools/xrt/: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  conanfile.txt  test.batch
tools/xrt/api/include/: xrt.h
tools/xrt/api/src/: callbackTable.c  test.c
tools/xrt/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
tools/xrt/build2/CPM_modules/: Findfmt.cmake  Findjson.cmake  Findmagic_enum.cmake  Findreproc.cmake
tools/xrt/cmake/: install-xrt.sh
tools/xrt/cross-compiler/: Dockerfile  Dockerfile-pynq  Dockerfile-x86_64  ct-ng-pynq.config  ct-ng-x86_64.config  docker-install-ct-ng.sh  docker-install-libs.sh  docker-install.sh  docker-run-cmake.sh
tools/xrt/data/input/: frame0.txt  frame1.txt  frame2.txt
tools/xrt/data/output/: expected_result.txt
tools/xrt/docs/: 000-README.txt  axi_writeuri_cu_comentariu.txt  cross_compile.md
tools/xrt/etc/: simulator_axi_vlog.prj
tools/xrt/include/common/: Args.h  Args.hpp  CodeGen.h  Constants.hpp  Defer.h  Globals.h  Globals.hpp  Reader.h  Utils.h  Utils.hpp  XrtException.h  XrtException.hpp
tools/xrt/include/common/allocator/: SAllocator.hpp  UDmaSAllocator.hpp
tools/xrt/include/common/arch/: Arch.hpp
tools/xrt/include/common/cache/: Cache.h  Cache.hpp  md5.h
tools/xrt/include/common/debug/: Debug.hpp
tools/xrt/include/common/log/: Logger.hpp
tools/xrt/include/common/resources/: ResourceIdentifier.hpp
tools/xrt/include/common/types/: Matrix.hpp  Tensor.hpp  Types.hpp
tools/xrt/include/exported/midlevel/: Accelerator.hpp
tools/xrt/include/manager/: Manager.h  Manager.hpp
tools/xrt/include/manager/debugmanager/: DebugManager.hpp
tools/xrt/include/manager/driver/: Driver.h  Driver.hpp
tools/xrt/include/manager/libmanager/: FunctionInfo.hpp  HexLibraryLoader.h  HexLibraryLoader.hpp  InternalLibraryLoader.h  InternalLibraryLoader.hpp  JsonLibraryLoader.h  JsonLibraryLoader.hpp  LibErrors.hpp  LibManager.h  LibManager.hpp  LibraryResolver.h  LibraryResolver.hpp  LowLevelFunctionInfo.hpp
tools/xrt/include/manager/memmanager/: FreeSpace.hpp  MemManager.h  MemManager.hpp  SymbolInfo.hpp  UserBreakpoint.hpp
tools/xrt/include/manager/modmanager/: Callbacks.h  ModCompiler.h  ModFunctionInfo.hpp  ModManager.h
tools/xrt/include/sources/: Sources.h  Sources.hpp
tools/xrt/include/sources/batch/: BatchSource.h  BatchSource.hpp
tools/xrt/include/sources/cmd/: ANSI-color-codes.h  CmdSource.h  CmdSource.hpp
tools/xrt/include/sources/common/: Source.h  Source.hpp
tools/xrt/include/sources/file/: FileSource.h  FileSource.hpp
tools/xrt/include/sources/mux/: MuxSource.h  MuxSource.hpp
tools/xrt/include/sources/net/: NetSource.h  NetSource.hpp
tools/xrt/include/targets/: Targets.h  Targets.hpp
tools/xrt/include/targets/common/: Architecture.h  CodeGen.h  Future.hpp  Target.h  Target.hpp
tools/xrt/include/targets/file/: FileTarget.h  FileTarget.hpp
tools/xrt/include/targets/fpga/: Dma.hpp  DmaFuture.hpp  FpgaTarget.h  FpgaTarget.hpp  UioDevice.hpp
tools/xrt/include/targets/goldenmodel/: GoldenModelTarget.h  GoldenModelTarget.hpp
tools/xrt/include/targets/midlevel/: MidLevelTransformer.hpp
tools/xrt/include/targets/sim/: AxiLite.h  AxiLite.hpp  ClockConsumerThread.hpp  ClockProducerThread.hpp  Colormod.hpp  Constants.h  Constants.hpp  DUT.hpp  Defines.hpp  DrainThread.hpp  Dut.h  InitThread.hpp  Isa.hpp  Parameters.hpp  ReadDataThread.hpp  Semaphore.hpp  SimFuture.hpp  SimStream.hpp  SimStreams.hpp  SimTarget.h  SimTarget.hpp  Simulation.hpp  Simulator.h  Sync.hpp  Tb.h  Tb.hpp  Thread.hpp  Timer.hpp  WriteDataThread.hpp  WriteProgramThread.hpp  XSILoader.hpp  XpuTestBench.h  constants.hpp  defines.h  parameters.h  psimulation.h  xsi_loader.h
tools/xrt/include/transformers/: Transformers.h  Transformers.hpp
tools/xrt/include/transformers/common/: Transformer.h  Transformer.hpp
tools/xrt/lib/: libxpu.json  lowlevel.json
tools/xrt/models/: MatMatAddTest.onnx  add.onnx  create_add2.py  linear_regression.onnx  linear_regression.onnx.json  mul.onnx  simple_conv_000.onnx.json
tools/xrt/src/: main.cpp
tools/xrt/src/common/: Args.cpp  Args.hpp  Constants.cpp  Constants.hpp  Globals.cpp  Reader.cpp  Reader.hpp  Utils.cpp  Utils.hpp  XrtException.cpp
tools/xrt/src/manager/: Manager.cpp  Manager.hpp
tools/xrt/src/sources/: Sources.cpp  Sources.hpp
tools/xrt/src/targets/: Targets.cpp  Targets.hpp
tools/xrt/src/transformers/: Transformers.cpp
tools/xrt/xpu-home-skel/etc/: sdk.conf
(+820 files in other folders)
